Fixed the textarea to be 100% wide and moved the padding to not have the width end up too big.

--- a/sass/custom/_terms.scss
+++ b/sass/custom/_terms.scss
@@ -30,9 +30,12 @@
   .views-field-nothing {
     background: rgba(255,255,255,.45);
     bottom: 0;
-    padding: 10px;
     position: absolute;
-
+    width: 100;
+    
+    .field-content {
+      padding: 10px;
+    }
     p:first-child {
       margin-top: 0;
     }
